# routes/auth.js
@@ -12,7 +12,7 @@ const bcrypt = require("bcrypt");
 /**
  * This path handle registerations request
  */
-router.post("/Register", async (req, res, next) => {
+router.post("/register", async (req, res, next) => {
   try {
     // parameters exists
     // valid parameters
@@ -56,7 +56,7 @@ router.post("/Register", async (req, res, next) => {
 /**
  * This path authenticate the logged-in user details, and set the cookie
  */
-router.post("/Login", async (req, res, next) => {
+router.post("/login", async (req, res, next) => {
   try {
     // check that username exists
     const users = await DButils.execQuery("SELECT userName FROM users");
@@ -87,7 +87,7 @@ router.post("/Login", async (req, res, next) => {
 /**
  * This path log out the session user, if he logged-in
  */
-router.post("/Logout", function (req, res) {
+router.post("/logout", function (req, res) {
   req.session.reset(); // reset the session info --> send cookie when  req.session == undefined!!
   res.send({ success: true, message: "logout succeeded" });
 });
