# routes/user.js
@@ -26,7 +26,7 @@ router.use(async function (req, res, next) {
 /**
  * This path save user recipe
  */
- router.post("/userRecipes", async (req, res, next) => {
+ router.post("/addUserRecipe", async (req, res, next) => {
   const succeeded = await user_utils.addRecipe(req.body,req.session.user_id);
   if (succeeded)
     res.status(201).send({ message: "recipe was added", success: true });
@@ -37,10 +37,10 @@ router.use(async function (req, res, next) {
 /**
  * This path gets body with recipeId and save this recipe in the favorites list of the logged-in user
  */
-router.post('/favorites', async (req,res,next) => {
+router.post('/addFavorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    const recipe_id = req.body.recipe_id;
+    const recipe_id = req.body.recipeId;
     alresdyLiked = await DButils.execQuery(`SELECT * from FavoriteRecipes where user_id = ${user_id} and recipe_id = ${recipe_id}`);
     if (alresdyLiked.length == 1)
       throw { status: 403, message: "User already markd this recipe as favorite!" };
@@ -85,7 +85,7 @@ router.get('/lastSearch', async (req,res,next) => {
 /**
  * This path returns the favorites recipes that were saved by the logged-in user
  */
- router.get('/favorites', async (req,res,next) => {
+ router.get('/getFavorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipes_ids = await user_utils.getFavoriteRecipes(user_id);
@@ -100,7 +100,7 @@ router.get('/lastSearch', async (req,res,next) => {
 /**
  * This path get all user recipes
  */
-router.get('/userRecipes', async (req,res,next) => {
+router.get('/getUserRecipe', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const results = await user_utils.getUserRecipes(user_id);
