# routes/utils/user_utils.js
@@ -1,9 +1,12 @@
 const DButils = require("./DButils");
 
-async function markAsFavorite(user_id, recipe_id){
-    await DButils.execQuery(`insert into FavoriteRecipes values ('${user_id}',${recipe_id})`);
-}
 
+
+//----------------------> getters functions
+
+/**
+ * This function return all the Favorites Recipes of a given user_id.
+ */
 async function getFavoriteRecipes(user_id){
     const recipes_ids = await DButils.execQuery(`select recipe_id from FavoriteRecipes where user_id='${user_id}'`);
     to_ret = []
@@ -13,16 +16,20 @@ async function getFavoriteRecipes(user_id){
     return to_ret;
 }
 
+/**
+ * This function return the 3 last watches recipes of a given user_id.
+ */
 async function getThreelastWatched(user_id){
     let threeRecipes = await DButils.execQuery(`select * from threeLastWatchesRecipes where user_id=${user_id}`)
     let rep1 = threeRecipes[0].recipe_id_1;
     let rep2 = threeRecipes[0].recipe_id_2;
     let rep3 = threeRecipes[0].recipe_id_3;
     return [rep1,rep2,rep3];
-
-
 }
 
+/**
+ * This function return the last query searched by a given user_id.
+ */
 async function getLastSearch(userId){
     const lastSearch = await DButils.execQuery(`select query from lastsearch where user_id=${userId}`);
     if (lastSearch.length == 0)
@@ -31,6 +38,9 @@ async function getLastSearch(userId){
     return [rep1];
 }
 
+/**
+ * This function return all the user recipes of a given user_id.
+ */
 async function getUserRecipes(userId){
     const userRcipes = await DButils.execQuery(`select * from userRecipes where user_id=${userId}`);
     let to_ret = []
@@ -50,7 +60,32 @@ async function getUserRecipes(userId){
     return to_ret;
 }
 
+/**
+ * This function return all the family recipes of a given user_id.
+ */
+ async function getFamilyRercipe(user_id){
+    const userRcipes = await DButils.execQuery(`select * from familyRercipe where user_id=${user_id}`);
+    let to_ret = []
+    for(let i=0; i<userRcipes.length; i++){
+        let recipe_dict = {}
+        recipe_dict['id'] = userRcipes[i].id
+        recipe_dict['belong_to'] = userRcipes[i].belong_to
+        recipe_dict['events_to_cook'] = userRcipes[i].events_to_cook
+        recipe_dict['ingredients'] = userRcipes[i].ingredients
+        recipe_dict['instructions'] = userRcipes[i].instructions
+        recipe_dict['title'] = userRcipes[i].title
+        recipe_dict['img'] = userRcipes[i].img
+        to_ret[i] = recipe_dict
+    }
+    return to_ret;
+}
 
+
+//----------------------> setters functions
+
+/**
+ * This function add new user recipe of a given user_id.
+ */
 async function addRecipe(reqBody,userId){
     try{
         let recipe = {
@@ -75,22 +110,13 @@ async function addRecipe(reqBody,userId){
     }
 }
 
-async function getFamilyRercipe(user_id){
-    const userRcipes = await DButils.execQuery(`select * from familyRercipe where user_id=${user_id}`);
-    let to_ret = []
-    for(let i=0; i<userRcipes.length; i++){
-        let recipe_dict = {}
-        recipe_dict['id'] = userRcipes[i].id
-        recipe_dict['belong_to'] = userRcipes[i].belong_to
-        recipe_dict['events_to_cook'] = userRcipes[i].events_to_cook
-        recipe_dict['ingredients'] = userRcipes[i].ingredients
-        recipe_dict['instructions'] = userRcipes[i].instructions
-        recipe_dict['title'] = userRcipes[i].title
-        recipe_dict['img'] = userRcipes[i].img
-        to_ret[i] = recipe_dict
-    }
-    return to_ret;
+/**
+ * This function update the FavoriteRecipes table.
+ */
+ async function markAsFavorite(user_id, recipe_id){
+    await DButils.execQuery(`insert into FavoriteRecipes values ('${user_id}',${recipe_id})`);
 }
+
 
 
 exports.markAsFavorite = markAsFavorite;
